<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvNumeCostum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:text="Reșița"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCostumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@id/tvNumeCostum"
        android:text="@string/numar"
        android:textAlignment="textEnd"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvNumarCostum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="62dp"
        android:text="1"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUserGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tvGenderText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="45dp"
        android:text="M"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvGenderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="45dp"
        android:text="@string/gender_text"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvDataText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="75dp"
        android:text="@string/data"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvDataText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="75dp"
        android:layout_toEndOf="@id/tvGenderText"
        android:text="05.01.2020"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>